--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <a href="https://github.com/IonianTropics" rel="me">IonianTropics</a>
   <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
   <!-- To use social readers via microsub, follow these steps.
@@ -14,7 +15,7 @@
     3. Copy that <link> tag and paste it after this HTML comment.
     4. Publish the updated page!
    -->
-  <title>My New Website</title>
+  <title>io Bowie</title>
   <style>
     @media (prefers-color-scheme: dark) {
       html { background-color: #111111; color: #fbfbfb; }
@@ -43,24 +44,24 @@
       <img class="u-photo" alt="My profile photo" src="__your_image__" />
     -->
     <h1>
-      I'm <span class="p-name">Jane Smith</span>.
+      <span class="p-name">io Bowie</span>
     </h1>
 
     <p class="p-note">
-      ...and I am a human on the Internet.
+      hi! I'm io (she/it) a software engineer and game developer
     </p>
 
     <ul>
       <!-- Replace __this_page__ with your domain -->
-      <li><a class="u-uid u-url" href="__this_page__">My New Website</a></li>
+      <!-- <li><a class="u-uid u-url" href="__this_page__">My New Website</a></li> -->
 
       <!-- Update or remove the below links! -->
       
       <!-- Replace _mygithubid_ with your GitHub username in both places on the next line: -->
-      <li>Github: <a class="u-url" href="https://github.com/_mygithubid_" rel="me">@_mygithubid_</a></li>
+      <li>Github: <a class="u-url" href="https://github.com/IonianTropics" rel="me">@IonianTropics</a></li>
 
       <!-- Replace _mytwitterid_ with your Twitter username in both places on the next line: -->
-      <li>Twitter: <a class="u-url" href="https://twitter.com/_mytwitterid_" rel="me">@_mytwitterid_</a></li>
+      <li>Bluesky: <a class="u-url" href="https://ioniantropics.bsky.social" rel="me">@ioniantropics</a></li>
       
     </ul>
   </main>
